--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="submit">Submit</string>
     <string name="phone_error">Invalid phone number format</string>
     <string name="password">Password</string>
+    <string name="enter_your_pin">Enter your PIN code for quick login</string>
 </resources>
